# d-interpreter

./: .gitignore  LICENSE  README.md  build.sh  program.d  test-in-docker.sh  test.sh
debugbuild/: .gitignore
proj-describtion/: refined_grammar.txt
proj-description/: README.md  ext-bachus-naur-form.txt  refined_grammar.txt
scripts/: build  install_all  install_dinterp  install_sdk  reformat-code  test  test_noinstall
scripts/docker-test/: Dockerfile  sampleprogram.d  test.sh
src/: .clang-format  CMakeLists.txt  DInterpConfig.cmake.in  README.md  main.cpp
src/bigint/: CMakeLists.txt  README.md  bigint.cpp
src/bigint/include/: bigint.h
src/bigint/include/dinterp/: bigint.h
src/bigint/tests/: .clangd  CMakeLists.txt  arith_samples.cpp  arith_samples.h  main.cpp
src/compilation_log/: CMakeLists.txt  CompilationLog.cpp  CompilationMessage.cpp
src/compilation_log/include/complog/: .clangd  CompilationMessage.h
src/compilation_log/tests/: .clangd  CMakeLists.txt  MessageTests.cpp  badwarning.cpp  badwarning.h  spanerror.cpp  spanerror.h
src/complog/: .clangd  CMakeLists.txt  CompilationLog.cpp  CompilationMessage.cpp  README.md
src/complog/include/complog/: CompilationLog.h
src/complog/include/dinterp/complog/: .clangd  CompilationLog.h  CompilationMessage.h
src/complog/tests/: .clangd  CMakeLists.txt  LogTests.cpp  MessageTests.cpp  SeverityTests.cpp  baderror.cpp  baderror.h  badwarning.cpp  badwarning.h  fixture.cpp  fixture.h  spanerror.cpp  spanerror.h
src/debugbuild/: .gitignore
src/interp/: .clangd  CMakeLists.txt  README.md  closure.cpp  execution.cpp  input.cpp  runner.cpp  runtimeContext.cpp  unaryOpExec.cpp  userCallable.cpp  varScopes.cpp  variable.cpp
src/interp/include/: .clangd  interp.h
src/interp/include/dinterp/: .clangd  interp.h
src/interp/include/dinterp/interp/: .clangd  closure.h  execution.h  input.h  runner.h  runtimeContext.h  unaryOpExec.h  userCallable.h  varScopes.h  variable.h
src/interp/include/interp/: .clangd  closure.h  execution.h  input.h  runner.h  runtimeContext.h  unaryOpExec.h  userCallable.h  varScopes.h  variable.h
src/interp/tests/: .clangd  CMakeLists.txt  fixture.cpp  fixture.h  main.cpp
src/interp/tests/samples/: CMakeLists.txt
src/interp/tests/samples/basic/: 01.d  02.d  03.d  05.d  06.d  07.d  09.d  10.d  11.d  12.d  15.d  CMakeLists.txt
src/interp/tests/samples/complex/: 01.d  02.d  04.d  05.d  06.d  08.d  13.d  CMakeLists.txt
src/interp/tests/samples/extra/: CMakeLists.txt  array.d
src/lexer/: .clangd  CMakeLists.txt  README.md  lexer.cpp  lexer.h
src/lexer/include/: .clangd
src/lexer/include/dinterp/: .clangd  lexer.h
src/lexer/tests/: .clangd  CMakeLists.txt  badtest1.cpp  badtest2.cpp  badtest3.cpp  biginttest.cpp  goodtest1.cpp  goodtest2.cpp  main.cpp  shebang.cpp
src/locators/: CMakeLists.txt  CodeFile.cpp  README.md  locator.cpp
src/locators/include/dinterp/locators/: CodeFile.h  locator.h
src/locators/include/locators/: CodeFile.h  locator.h
src/locators/tests/: CMakeLists.txt  CodeFileTests.cpp  LocatorTests.cpp  SpanLocatorTests.cpp  fixture.cpp  fixture.h
src/main/: .clangd  CMakeLists.txt  main.cpp  syntaxExplorer.cpp  syntaxExplorer.h  tokenTypeStrings.h
src/runtime/: .clangd  CMakeLists.txt  README.md  derror.cpp  stringFunctions.cpp  types.cpp  values.cpp
src/runtime/include/: .clangd  runtime.h
src/runtime/include/dinterp/: .clangd  runtime.h
src/runtime/include/dinterp/runtime/: .clangd  derror.h  types.h  values.h
src/runtime/include/runtime/: values.h
src/runtime_objects/: .clangd  CMakeLists.txt  types.cpp  values.cpp
src/runtime_objects/include/: .clangd  runtime.h
src/runtime_objects/include/runtime/: .clangd  types.h  values.h
src/semantic/: CMakeLists.txt  README.md  astDeepCopy.cpp  diagnostics.cpp  expressionChecker.cpp  precomputed.cpp  semantic.cpp  statementChecker.cpp  unaryOpsChecker.cpp  valueTimeline.cpp
src/semantic/include/dinterp/: semantic.h
src/semantic/include/dinterp/semantic/: .clangd  diagnostics.h  expressionChecker.h  statementChecker.h  unaryOpsChecker.h  valueTimeline.h
src/semantic/include/dinterp/syntaxext/: astDeepCopy.h  precomputed.h
src/semantic/tests/: fixture.cpp  fixture.h  main.cpp
src/semantic/tests/demos/: 04.d  09.d  11.d  13.d  14.d  15.d  17.d  29.d  31.d  35.d
src/semantics/: .clangd  CMakeLists.txt  astDeepCopy.cpp  diagnostics.cpp  expressionChecker.cpp  precomputed.cpp  semantic.cpp  statementChecker.cpp  unaryOpsChecker.cpp  valueTimeline.cpp
src/semantics/include/: .clangd  astDeepCopy.h  diagnostics.h  expressionChecker.h  precomputed.h  statementChecker.h  unaryOpsChecker.h  valueTimeline.h
src/semantics/include/dinterp/: .clangd  semantic.h
src/semantics/include/semantic/: .clangd  diagnostics.h  expressionChecker.h  statementChecker.h  unaryOpsChecker.h  valueTimeline.h
src/semantics/include/syntaxext/: astDeepCopy.h  precomputed.h
src/semantics/tests/: .clangd  CMakeLists.txt  fixture.cpp  fixture.h  main.cpp
src/semantics/tests/demos/: 12.d  18.d  19.d  20.d  24.d  28.d  32.d  34.d  37.d  38.d  39.d  CMakeLists.txt
src/syntax/: .clangd  CMakeLists.txt  README.md  astvisitor.cpp  exceptions.cpp  syntax.cpp  syntax.h  syntaxcontext.cpp  tokenscanner.cpp
src/syntax/include/: .clangd  asterrors.h  syntax.h
src/syntax/include/dinterp/: .clangd  asterrors.h  syntax.h
src/syntax/tests/: .clangd  CMakeLists.txt  fixture.cpp  fixture.h  main.cpp
src/syntax/tests/basic/: 04.d  08.d  13.d  CMakeLists.txt
src/syntax/tests/complex/: 03.d  07.d  12.d  13.d  CMakeLists.txt
src/syntax/tests/custom/: CMakeLists.txt  empty-var.d  newlines.d
tests/: fav-semantic.d  featurelist.md
tests/basic/: 01.d
tests/complex/: 04.d  15.d
tests/docker-gtest/: Dockerfile  test.sh
tests/docker-test/: Dockerfile  test.sh
tests/docker-test/sample_user_project/: CMakeLists.txt
tests/feat/: 01.d  02.d  03.d  05.d  06.d  07.d  08.d  10.d  11.d  12.d  13.d  14.d  15.d  16.d  17.d  18.d  19.d  2.d  20.d  21.d  22.d  23.d  24.d  25.d  26.d  27.d  30.d  31.d  32.d  33.d  (+6 more)
(+14 files in other folders)
